Updatevmedia queries for responsive design

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="card-content">
                         <h3>PENDU</h3>
-                        <a href="../Pendu/index.html" class="play-btn">🎯 PLAY NOW</a>
+                        <a href="/pendu/index.html" class="play-btn">🎯 PLAY NOW</a>
                     </div>
                 </div>
 
@@ -72,7 +72,7 @@
                     </div>
                     <div class="card-content">
                         <h3>PET NURSE</h3>
-                        <a href="../Animaux/index.html" class="play-btn">🐾 PLAY NOW</a>
+                        <a href="/zoo/index.html" class="play-btn">🐾 PLAY NOW</a>
                     </div>
                 </div>
 
@@ -173,11 +173,11 @@
                     <i class="fas fa-phone"></i>
                     <span>+33 1 23 45 67 89</span>
                 </a>
-                <a href="shadah.hassan.abdallah@gmail.com" class="contact-link">
+                <a href="mailto:shadah.hassan.abdallah@gmail.com" class="contact-link">
                     <i class="fas fa-envelope"></i>
                     <span>shadah.hassan.abdallah@gmail.com</span>
                 </a>
-                <a href="https://github.com/S-HASSAN-ABDALLAH" target="_blank" class="contact-link">
+                <a href="https://github.com/S-HASSAN-ABDALLAH/GAME" target="_blank" class="contact-link">
                     <i class="fab fa-github"></i>
                     <span>https://github.com/S-HASSAN-ABDALLAH</span>
                 </a>
