--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
                 <div class="skills">
                     <h3>🛠️ TECH STACK</h3>
                     <div class="skill-tags">
-                        <span class="skill-tag">HTML5</span>
-                        <span class="skill-tag">CSS3</span>
+                        <span class="skill-tag">HTML</span>
+                        <span class="skill-tag">CSS</span>
                         <span class="skill-tag">JavaScript</span>
                         <span class="skill-tag">Bootstrap</span>
                         <span class="skill-tag">Responsive Design</span>
@@ -171,7 +171,7 @@
             <div class="contact-links">
                 <a href="tel:+33123456789" class="contact-link">
                     <i class="fas fa-phone"></i>
-                    <span>+33 1 23 45 67 89</span>
+                    <span>+33 7 55 12 31 68</span>
                 </a>
                 <a href="mailto:shadah.hassan.abdallah@gmail.com" class="contact-link">
                     <i class="fas fa-envelope"></i>
